# open-aerocharts

./: .gitattributes  README.md  check_map.js  package-lock.json  package.json  symbology.md
.agents/rules/: basepath.md  documentation.md
.agents/workflows/: doc-updates.md
.github/workflows/: deploy.yml
cifp-pmtiles/: .gitignore  README.md  build_pmtiles.sh  pyproject.toml  test_cifparse3.py
cifp-pmtiles/src/: cifp_to_fgb.py  cifp_to_geojson.py  fetch_airspace_shp.py  fetch_cifp.py  fetch_nasr.py  shp_to_fgb.py
client/: .biomeignore  biome.json  index.html  package.json  vite.config.ts
client/public/: airport_diagrams.pmtiles  airports_navaids.pmtiles  airspaces.pmtiles  boundary.pmtiles  cifp_data.pmtiles  enroute.pmtiles  faa_ais.pmtiles  other_layers.pmtiles  sw.js  waypoints_obstacles.pmtiles
client/src/: App.tsx  main.tsx  mapStyles.ts
client/src/components/FlightPlanPanel/: FlightPlanPanel.tsx
client/src/components/Map/: AeroMap.tsx  AirspaceOverlay.tsx  FeatureList.tsx  VfrMap.tsx
client/src/components/MobileBottomSheet/: MobileBottomSheet.tsx
client/src/components/SettingsPanel/: AeronauticalSettings.tsx  SettingsPanel.tsx
client/src/components/ui/: Accordion.tsx
client/src/styles/: theme.css
client/src/types/: AeronauticalLayerState.ts  FlightPlan.ts
client/src/utils/: aeroIcons.ts  airspaceColors.ts  routeParser.ts  vfrIcons.ts
example-data/: 49.geojson  49.pbf
faa-ais-pmtiles/: .gitignore  README.md  datasources.md  pyproject.toml  scrape_test.py  scrape_test_pw.py  test_airports.pmtiles  test_cifparse3.py
faa-ais-pmtiles/output/: airport_diagrams.pmtiles  airports_major.pmtiles  airports_navaids.pmtiles  airspaces.pmtiles  boundary.pmtiles  cifp_data.pmtiles  enroute.pmtiles  other_dense.pmtiles  other_layers.pmtiles  other_sparse.pmtiles  test_desc.pmtiles  test_nolimit_layers.pmtiles  waypoints_obstacles.pmtiles
faa-ais-pmtiles/src/: build_pmtiles.py  build_search_index.py  cifp_to_fgb.py  fetch_airspace_shp.py  fetch_cifp.py  fetch_nasr.py  inspect_fgb.py  list_enums.py  shp_to_fgb.py  spot_check.py
faa-ais-pmtiles/src/adds/: convert.py
faa-ais-pmtiles/src/cifp/: convert.py  fetch.py  nasr.py
faa-ais-pmtiles/src/common/: utils.py
faa-ais-pmtiles/src/pmtiles/: build.py
faa-ais-pmtiles/src/runways/: geometry.py  merge.py
faa-ais-pmtiles/src/search/: build_index.py
faa-ais-pmtiles/src/tools/: enums.py  inspect.py  spot_check.py
src/: App.tsx
src/components/Map/: VfrMap.tsx
