[project]
name = "cifp-pmtiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cifparse>=2.0.9",
    "geojson>=3.2.0",
    "requests>=2.32.5",
]

[project.scripts]
fetch-cifp = "src.fetch_cifp:main"
cifp-to-geojson = "src.cifp_to_geojson:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
