[project]
name = "faa-ais-pmtiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cifparse>=2.0.9",
    "geojson>=3.2.0",
    "geopandas>=1.1.2",
    "pyogrio>=0.12.1",
    "pyshp>=2.3.1",
    "requests>=2.32.5",
    "tippecanoe>=2.7.0",
]

[project.scripts]
fetch-cifp = "src.fetch_cifp:main"
cifp-to-fgb = "src.cifp_to_fgb:main"
fetch-airspace-shp = "src.fetch_airspace_shp:main"
shp-to-fgb = "src.shp_to_fgb:main"
build-pmtiles = "src.build_pmtiles:main"
spot-check = "src.spot_check:main"
list-enums = "src.list_enums:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
