[project]
name = "faa-ais-pmtiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cifparse>=2.0.9",
    "geojson>=3.2.0",
    "geopandas>=1.1.2",
    "pyogrio>=0.12.1",
    "pyshp>=2.3.1",
    "requests>=2.32.5",
    "tippecanoe>=2.7.0",
]

[project.scripts]
fetch-cifp = "src.cifp.fetch:main"
cifp-to-fgb = "src.cifp.convert:main"
fetch-airspace-shp = "src.adds.fetch:main"
shp-to-fgb = "src.adds.convert:main"
build-pmtiles = "src.pmtiles.build:main"
spot-check = "src.tools.spot_check:main"
list-enums = "src.tools.enums:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
